--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ task javadoc(type: Javadoc) {
 }
 
 dependencies {
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.multidex:multidex:2.0.1'
