--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ captures/
 .externalNativeBuild
 
 # Google Services (e.g. APIs or Firebase)
-google-services.json
+google-services*
 
 # Freeline
 freeline.py
