--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation("androidx.fragment:fragment-testing:1.1.0-alpha03",
             { exclude group: 'androidx.test', module: 'core' })
-    implementation 'io.alterac.blurkit:blurkit:1.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
 
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
