--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:3.1.0"
+    androidTestImplementation "org.mockito:mockito-android:3.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
@@ -62,7 +64,7 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
     implementation "androidx.fragment:fragment:1.1.0"
-    implementation 'androidx.annotation:annotation:1.0.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
     implementation("androidx.fragment:fragment-testing:1.1.0-alpha03",
             { exclude group: 'androidx.test', module: 'core' })
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
