maps: add basic map support

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MapActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
@@ -51,6 +52,9 @@
                 android:resource="@xml/file_paths"></meta-data>
         </provider>
 
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_key" />
     </application>
 
 </manifest>
