--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.libraries.places:places-compat:2.1.0'
     implementation ('com.schibstedspain.android:leku:6.4.0') {
         exclude group: 'com.google.android.gms'
         exclude group: 'androidx.appcompat'
