--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
         exclude group: 'com.google.android.gms'
         exclude group: 'androidx.appcompat'
     }
+    implementation 'com.google.firebase:firebase-database:19.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
