--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.12'
     testImplementation "org.mockito:mockito-core:3.1.0"
+    androidTestImplementation ('org.awaitility:awaitility:4.0.1',  {exclude group: "org.hamcrest"})
     androidTestImplementation "org.mockito:mockito-android:3.1.0"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation ('androidx.test.ext:junit:1.1.1')
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -73,7 +74,7 @@ dependencies {
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.libraries.places:places-compat:2.1.0'
-    implementation ('com.schibstedspain.android:leku:6.4.0') {
+    implementation('com.schibstedspain.android:leku:6.4.0') {
         exclude group: 'com.google.android.gms'
         exclude group: 'androidx.appcompat'
     }
@@ -81,3 +82,4 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
+
