--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.FollowerRequestActivity">
-        </activity>
+        <activity android:name=".ui.FollowerRequestActivity"></activity>
         <activity android:name=".ui.FragmentEmptyClass" />
         <activity
             android:name=".MainActivity"
@@ -36,18 +35,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MapActivity"/>
+        <activity android:name=".MapActivity" />
         <activity
-                android:name="com.schibstedspain.leku.LocationPickerActivity"
-                android:label="@string/leku_title_activity_location_picker"
-                android:theme="@style/LoginBackground"
-                android:windowSoftInputMode="adjustPan"
-                android:parentActivityName=".MainActivity">
+            android:name="com.schibstedspain.leku.LocationPickerActivity"
+            android:label="@string/leku_title_activity_location_picker"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/LoginBackground"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                       android:resource="@xml/leku_searchable" />
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/leku_searchable" />
         </activity>
 
         <meta-data
@@ -61,12 +62,12 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
 
         <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="@string/google_maps_key" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
     </application>
 
 </manifest>
