--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.FollowerRequestActivity"></activity>
-        <activity android:name=".ui.FragmentEmptyClass" />
+        <activity android:name=".ui.FollowerRequestActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".ui.FragmentEmptyClass" android:screenOrientation="portrait"/>
         <activity
             android:name=".MainActivity"
             android:allowBackup="true"
