--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,8 @@
             android:label="@string/leku_title_activity_location_picker"
             android:parentActivityName=".MainActivity"
             android:theme="@style/LoginBackground"
-            android:windowSoftInputMode="adjustPan">
-            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
