--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.android.gms.oss-licenses-plugin'
 
 android {
     compileSdkVersion 29
@@ -79,6 +80,7 @@ dependencies {
         exclude group: 'androidx.appcompat'
     }
     implementation 'com.google.firebase:firebase-database:19.2.0'
+    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
